--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
         "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-ios": "^4.5.4",
-        "cordova-plugin-whitelist": "^1.3.3"
+        "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-x-toast": "^2.6.2"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-x-toast": {}
         },
         "platforms": [
             "android",
