--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cordova-browser": "^5.0.3",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-wechat": "^2.1.0",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-plugin-x-toast": "^2.6.2"
     },
@@ -21,7 +22,10 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-console": {},
-            "cordova-plugin-x-toast": {}
+            "cordova-plugin-x-toast": {},
+            "cordova-plugin-wechat": {
+                "WECHATAPPID": "wx5367b51f05dbb862"
+            }
         },
         "platforms": [
             "android",
