调试微信登录

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
             "cordova-plugin-console": {},
             "cordova-plugin-x-toast": {},
             "cordova-plugin-wechat": {
-                "WECHATAPPID": "wx5367b51f05dbb862"
+                "WECHATAPPID": "wx9de762fc20278106"
             }
         },
         "platforms": [
